--- a/src/web.config
+++ b/src/web.config
@@ -1,16 +1,23 @@
 <configuration>
-<system.webServer>
-  <rewrite>
-    <rules>
-      <rule name="Angular Routes" stopProcessing="true">
-        <match url=".*" />
-      <conditions logicalGrouping="MatchAll">
-        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-      </conditions>
-      <action type="Rewrite" url="/" />
-      </rule>
-    </rules>
-  </rewrite>
-</system.webServer>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="HTTP/S to HTTPS Redirect" enabled="true" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions logicalGrouping="MatchAny">
+            <add input="{SERVER_PORT_SECURE}" pattern="^0$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" />
+        </rule>
+        <rule name="Angular Routes" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
