--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sl56Mobile2",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "深圳市升蓝物流有限公司",
+  "homepage": "https://www.sl56.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.15.0",
     "@ionic-native/status-bar": "^5.15.0",
     "@ionic/angular": "^4.11.5",
+    "cordova-android": "^8.1.0",
     "core-js": "^2.6.10",
     "jquery": "^3.4.1",
     "ng2-signalr": "^8.0.2",
@@ -57,7 +58,26 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
-  "description": "An Ionic project"
+  "description": "升蓝物流有限公司客户端",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
