--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@ionic-native/splash-screen": "^5.15.0",
     "@ionic-native/status-bar": "^5.15.0",
     "@ionic/angular": "^4.11.5",
+    "@jiguang-ionic/jpush": "^2.0.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-jcore": "^1.3.1",
     "core-js": "^2.6.10",
+    "jpush-phonegap-plugin": "^3.7.3",
     "jquery": "^3.4.1",
     "ng2-signalr": "^8.0.2",
     "ngx-cookie-service": "^2.2.0",
@@ -74,7 +77,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "jpush-phonegap-plugin": {
+        "APP_KEY": "e4127adc00a3e35822cbc796",
+        "CHANNEL": "developer-default"
+      }
     },
     "platforms": [
       "android"
