--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/core": "^5.15.0",
-    "@ionic-native/splash-screen": "^5.15.0",
-    "@ionic-native/status-bar": "^5.15.0",
-    "@ionic/angular": "^4.11.5",
+    "@ionic-native/core": "^5.18.0",
+    "@ionic-native/splash-screen": "^5.18.0",
+    "@ionic-native/status-bar": "^5.18.0",
+    "@ionic/angular": "^4.11.7",
     "@jiguang-ionic/jpush": "^2.0.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-jcore": "^1.3.1",
-    "core-js": "^2.6.10",
+    "core-js": "^2.6.11",
     "jpush-phonegap-plugin": "^3.7.3",
     "jquery": "^3.4.1",
     "ng2-signalr": "^8.0.2",
@@ -50,7 +50,13 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.0",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -61,13 +67,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
-    "cordova-plugin-whitelist": "1.3.3",
-    "cordova-plugin-statusbar": "2.4.2",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-ionic-webview": "^4.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5"
+    "typescript": "~3.4.3"
   },
   "description": "升蓝物流有限公司客户端",
   "cordova": {
