--- a/package.json
+++ b/package.json
@@ -20,13 +20,21 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/code-push": "^5.18.0",
     "@ionic-native/core": "^5.18.0",
     "@ionic-native/splash-screen": "^5.18.0",
     "@ionic-native/status-bar": "^5.18.0",
     "@ionic/angular": "^4.11.7",
     "@jiguang-ionic/jpush": "^2.0.0",
+    "code-push": "^3.0.1",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-code-push": "^1.12.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file-transfer": "^1.6.3",
     "cordova-plugin-jcore": "^1.3.1",
+    "cordova-plugin-zip": "^3.1.0",
     "core-js": "^2.6.11",
     "jpush-phonegap-plugin": "^3.7.3",
     "jquery": "^3.4.1",
@@ -81,7 +89,11 @@
       "jpush-phonegap-plugin": {
         "APP_KEY": "e4127adc00a3e35822cbc796",
         "CHANNEL": "developer-default"
-      }
+      },
+      "cordova-plugin-code-push": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-zip": {}
     },
     "platforms": [
       "android"
