--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/code-push": "^5.18.0",
     "@ionic-native/core": "^5.18.0",
+    "@ionic-native/file": "^5.18.0",
+    "@ionic-native/file-transfer": "^5.18.0",
     "@ionic-native/splash-screen": "^5.18.0",
     "@ionic-native/status-bar": "^5.18.0",
     "@ionic/angular": "^4.11.7",
@@ -35,6 +37,7 @@
     "cordova-plugin-file-transfer": "^1.6.3",
     "cordova-plugin-jcore": "^1.3.1",
     "cordova-plugin-zip": "^3.1.0",
+    "cordova-res": "^0.8.1",
     "core-js": "^2.6.11",
     "jpush-phonegap-plugin": "^3.7.3",
     "jquery": "^3.4.1",
