--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-file": "^4.3.3",
     "cordova-plugin-file-transfer": "^1.6.3",
     "cordova-plugin-jcore": "^1.3.1",
+    "cordova-plugin-wechat": "^2.9.0",
     "cordova-plugin-zip": "^3.1.0",
     "cordova-res": "^0.8.1",
     "core-js": "^2.6.11",
