--- a/package.json
+++ b/package.json
@@ -91,8 +91,7 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "jpush-phonegap-plugin": {
-        "APP_KEY": "e4127adc00a3e35822cbc796",
-        "CHANNEL": "developer-default"
+        "APP_KEY": "4affd6740b05e4f967b7a776"
       },
       "cordova-plugin-code-push": {},
       "cordova-plugin-file": {},
