--- a/package.json
+++ b/package.json
@@ -20,33 +20,33 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/code-push": "^5.18.0",
-    "@ionic-native/core": "^5.18.0",
-    "@ionic-native/file": "^5.18.0",
-    "@ionic-native/file-transfer": "^5.18.0",
-    "@ionic-native/splash-screen": "^5.18.0",
-    "@ionic-native/status-bar": "^5.18.0",
-    "@ionic/angular": "^4.11.7",
+    "@ionic-native/code-push": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/file": "^5.28.0",
+    "@ionic-native/file-transfer": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic/angular": "^4.11.10",
     "@jiguang-ionic/jpush": "^2.0.0",
-    "code-push": "^3.0.1",
+    "code-push": "^3.1.5",
     "cordova-android": "^8.1.0",
-    "cordova-plugin-code-push": "^1.12.0",
+    "cordova-plugin-code-push": "^1.12.5",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-file": "^4.3.3",
-    "cordova-plugin-file-transfer": "^1.6.3",
-    "cordova-plugin-jcore": "^1.3.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-jcore": "^1.3.3",
     "cordova-plugin-wechat": "^2.9.0",
     "cordova-plugin-zip": "^3.1.0",
     "cordova-res": "^0.8.1",
     "core-js": "^2.6.11",
-    "jpush-phonegap-plugin": "^3.7.3",
-    "jquery": "^3.4.1",
+    "jpush-phonegap-plugin": "^3.7.6",
+    "jquery": "^3.5.1",
     "ng2-signalr": "^8.0.2",
-    "ngx-cookie-service": "^2.2.0",
-    "rxjs": "^6.5.3",
+    "ngx-cookie-service": "^2.4.0",
+    "rxjs": "^6.6.2",
     "signalr": "^2.4.1",
-    "tslib": "^1.9.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -62,10 +62,10 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.0",
+    "codelyzer": "^5.2.2",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
@@ -75,11 +75,11 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "^3.4.5"
   },
   "description": "升蓝物流有限公司客户端",
   "cordova": {
